syntax = "proto3";

package product;

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double basePrice = 4;
  repeated string ingredients = 5;
  repeated Size sizes = 6;
}

message Size {
  string id = 1;
  string name = 2;
  double priceModifier = 3;
}

message ProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double basePrice = 3;
  repeated string ingredients = 4;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double basePrice = 4;
  repeated string ingredients = 5;
}

message ProductsResponse {
  repeated Product products = 1;
}

message DeleteResponse {
  bool success = 1;
}

message Empty {}

service ProductService {
  rpc GetProduct (ProductRequest) returns (Product);
  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc UpdateProduct (UpdateProductRequest) returns (Product);
  rpc DeleteProduct (ProductRequest) returns (DeleteResponse);
  rpc GetProducts (Empty) returns (ProductsResponse);
}